# GW_handover

./: README.md
handover_Server/: CMakeLists.txt  build.sh  build_test.sh  clean.sh  handover_main.cpp  move.sh  run_build.sh
handover_Server/AirFrameServer/: CMakeLists.txt  airstub_main.c  move_tmp.sh
handover_Server/AirFrameServer/conf/: air_conf.json
handover_Server/AirFrameServer/include/: air_process.h  hash_tbl.h  ipc_server_stub.h
handover_Server/AirFrameServer/src/: air_process.c  hash_tbl.c  ipc_server_stub.c
handover_Server/BaseStation/: CMakeLists.txt  baseStation.c  baseStation.h  baseStationTR_arm.c  baseStationTR_arm.h  baseStation_main.c  bs_main.c  zlog.conf
handover_Server/BaseStation/conf/: bs_conf.json  run.sh
handover_Server/BaseStation/configuration_files/: client_configure.json
handover_Server/BaseStation/include/: baseStationTR_arm.h  bs_air.h  bs_event_process.h  bs_monitor.h  bs_network.h  bs_network_json.h  bs_utility.h  bs_x2.h  define_common.h  msg_queue.h  timer.h
handover_Server/BaseStation/src/: baseStationTR_arm.c  bs_air.c  bs_event_process.c  bs_monitor.c  bs_network.c  bs_network_json.c  bs_utility.c  bs_x2.c  msg_queue.c  timer.c
handover_Server/BaseStation/ut/: CMakeLists.txt  ut_test.c
handover_Server/Distance/: CMakeLists.txt  common.h  distance_main.c
handover_Server/Distance/conf/: test_conf.json
handover_Server/configuration_files/: server_configure.json
handover_Server/dependence/: CMakeLists.txt  compileReadMe  complie_seq  signal.json
handover_Server/dependence/cjson/: CMakeLists.txt
handover_Server/dependence/gw_control/: CMakeLists.txt  gw_control.c  gw_control.h
handover_Server/dependence/gw_control/choose_json/: dac_gpio_disable.json  dac_gpio_enable.json  reg_dst_mac.json  reg_src_mac.json
handover_Server/dependence/gw_ipc/: CMakeLists.txt  gw_ipc.c  gw_ipc.h
handover_Server/dependence/gw_management_frame/: CMakeLists.txt  gw_frame.c  gw_frame.h  ut_test.c
handover_Server/dependence/gw_management_frame/system_test/bs/: CMakeLists.txt  bs_test.c
handover_Server/dependence/gw_management_frame/system_test/ve/: CMakeLists.txt  ve_test.c
handover_Server/dependence/gw_msg_queue/: CMakeLists.txt  msg_queue.c  msg_queue.h  priorityQueue.c  priorityQueue.h
handover_Server/dependence/gw_regdev/: CMakeLists.txt
handover_Server/dependence/gw_threadpool/: CMakeLists.txt  SimpleQueue.h  ThreadPool.c  ThreadPool.h
handover_Server/dependence/gw_timer/: CMakeLists.txt
handover_Server/dependence/gw_tunnel/: CMakeLists.txt  If_tunnel.h  gw_tunnel.c  gw_tunnel.h
handover_Server/dependence/gw_tunnel/test/: CMakeLists.txt  test_main.cpp
handover_Server/dependence/gw_utility/: CMakeLists.txt  gw_utility.c  gw_utility.h  ut_test.c
handover_Server/handoverServer/: CMakeLists.txt  handover_main.cpp
handover_Server/handoverServer/conf/: iptun.sh  my_init.sh  server_conf.json
handover_Server/handoverServer/configuration_files/: server_configure.json
handover_Server/handoverServer/include/: EventHandlerQueue.h  ThreadFuncWrapper.h  baseStation.h  common.h  manager.h  signal_json.h  vehicleInfo.h
handover_Server/handoverServer/src/: EventHandlerQueue.cpp  ThreadFuncWrapper.cpp  baseStation.cpp  manager.cpp  sender_udp.c  signal_json.cpp  vehicleInfo.cpp
handover_Server/include/: baseStation.h  common.h  manager.h
handover_Server/src/: baseStation.cpp  manager.cpp
handover_Server/ut/: CMakeLists.txt  close_self.sh  common.h  open_self.sh  spidev_test.c  ut_main.c
handover_Server/ut/src/: dict.c  sds.c
handover_Server/vehicle/: CMakeLists.txt  vehicle_main.c  zlog.conf
handover_Server/vehicle/conf/: run.sh  show.sh  ve_conf.json
handover_Server/vehicle/include/: common.h  msg_queue.h  ve_air.h  ve_event_process.h  ve_periodic.h  ve_utility.h
handover_Server/vehicle/src/: ve_air.c  ve_event_process.c  ve_periodic.c  ve_utility.c
